// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Control should render 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-sc-l56akm-3 ivpdVq"
  >
    <input
      class="CardControl__Input-sc-l56akm-0 czdQbd"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="CardControl__CustomCard-sc-l56akm-1 dyHEYM"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 fKWJCE"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Card Control should render with a control state 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-sc-l56akm-3 ivpdVq grid"
  >
    <input
      class="CardControl__Input-sc-l56akm-0 czdQbd"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="CardControl__CustomCard-sc-l56akm-1 dyHEYM"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 fKWJCE"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col justify-between items-center h-full"
        >
          <span>
            Bitcoin
          </span>
          <div
            class="CardControl__StateStyle-sc-l56akm-2 jWgIwi"
            data-testid="card__control-state"
          >
            <div
              class="sc-bdnxRM AFVmm"
              height="16"
              width="16"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </label>
</DocumentFragment>
`;
